# BreakingRoot

./: .gitignore  CMakeLists.txt  README.md  test2.sln
include/: app.h  bypass.h  command.h  common.h  creds_sam.h  defense.h  driver_byovd.h  lsass_advanced.h  recon_modules.h
src/: .app.cpp.un~  app.cpp~  bypass.cpp  command.cpp  creds_sam.cpp  defense.cpp  driver_byovd.cpp  lsass_advanced.cpp  main.cpp  recon_modules.cpp
test2/: README.md  app.cpp  app.h  command.cpp  command.h  common.h  lsass.cpp  main.cpp  test2.vcxproj  test2.vcxproj.filters
